Fixed background image Navbar toggle button not visible issue Minor design changes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-
+body {
+    background: url('/storage/background/background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
 .square {
     width: 100%;
     padding-bottom: 100%;
